# pIMF

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  sampling.ipynb
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst  sampling.ipynb  subclassing.ipynb  theory.md  tutorial.ipynb
docs/source/functional_forms/: L3.md  chabrier.md  index.md  kroupa.md  lognormal.md  salpeter.md  wise.md
examples/: BlackHoles.ipynb  populationIII.py
pimf/: __init__.py  initialmassfunction.py
pimf/sampling/: __init__.py  sampling.py
pimf/utils/: interpolator.py
tests/: test_sampling.py  test_utils.py
