[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pimf"
dynamic = ["version"]
authors = [
  { name="Evan Jones", email="evan.jones@ed.ac.uk" },
]
description = "A package for performing simple operations with stellar Initial Mass Functions."

license = "MIT"
license-files = ["LICEN[CS]E*"]

readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3"
dependencies = [
    "numpy",
    "scipy"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/E-W-Jones/pIMF"
Issues = "https://github.com/E-W-Jones/pIMF/issues"
Documentation = "https://pimf.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
version = {attr = "pimf.__version__"}

[project.optional-dependencies]
dev = [
  'Sphinx',
  'myst-parser',
  'linkify-it-py'
]